# B08-TSModel

./: .gitignore  AGENTS.md  README.md  details.md  pyproject.toml
configs/: c_stage_c1_execution.yaml  c_stage_c21_executable_open_model_evaluation.yaml  c_stage_c22_open_model_executable_upgrade.yaml  c_stage_c2_open_model_evaluation.yaml  c_stage_c31_cmapss_minimal_ingestion.yaml  c_stage_c32_open_model_cross_dataset_evaluation.yaml  c_stage_c33_single_candidate_open_model_local_evaluation.yaml  c_stage_c34_open_model_expansion_decision_review.yaml  c_stage_c3_public_dataset_registry.yaml  c_stage_minimum_evidence.yaml  fu13_real_data_schema.yaml  furnace_fu13_sim.yaml  real_data_schema_map.template.yaml
docs/: brainstorming-result.html  c22-results-review-and-c3-b-handoff.md  candidate-signal-and-system-event-interface.md  data-simulation-scenario.html  foundation-model-inference-design.html  foundation-model-inference-plan.html  foundation-model-verification-report.html  foundation-timeseries-research-roadmap.html  foundation-timeseries-research-roadmap.md  implementation-plan.html  index.html  knowledge-output-plan.html  leak-current-scenario-evaluation.md  model-capability-matrix.html  model-io-definition.html  model-route-decision.html  open-source-model-fit.html  real-data-request-guide.md  ttm-real-data-evaluation.md
reports/: c_stage_minimum_evidence_template.md  model_core_evaluation.md  model_route_decision.md
tests/: conftest.py  test_baselines.py  test_c1_evidence.py  test_c21_executable_open_model_evaluation.py  test_c2_open_model_evaluation.py  (+33 more)
(+165 files in other folders)
