[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b08-model-core"
version = "0.1.0"
description = "Core time-series model sandbox for B08 equipment predictive maintenance research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "pydantic>=2",
  "PyYAML>=6",
  "pyarrow>=12",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
foundation-ttm = [
  "granite-tsfm>=0.3.6",
  "torch>=2.10.0",
  "transformers>=4.57.6",
  "huggingface_hub>=0.36.2",
]

[project.scripts]
b08-model-core = "b08_model_core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
